--- a/StationDemoClient/station-angular4-poc/src/app/component/station-auth/station-auth.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/station-auth/station-auth.component.html
@@ -5,7 +5,7 @@
         <h1>Login Page</h1>
         
         <label>User
-          <input type="text" formControlName="user" />
+          <input type="text" formControlName="login" />
         </label>
         <br/>
 
