KAR003 : Add spring security

--- a/StationDemoClient/station-angular4-poc/src/app/component/station-auth/station-auth.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/station-auth/station-auth.component.html
@@ -15,7 +15,7 @@
         
         <br/>
         <br/>      
-        <input type="submit" class="button expanded" value="Connect" [disabled]="!rForm.valid">
+        <input type="submit" class="button expanded" value="Connect" [disabled]="disableButton(!rForm.valid)">
       </div>
     </div>
   </form>
