--- a/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
@@ -1,3 +1,72 @@
-<p>
-  search-station works!
-</p>
+<form [formGroup] = "rForm" (ngSubmit)="searchSecuritiesConf(rForm.value)">
+  <div class="form-container">
+    <div class="row columns">
+      <h1>Search traffic stations</h1>
+      <label>Reseau
+        <input type="text" formControlName="reseau" />
+      </label>
+  
+      <label>Station
+        <input type="text" formControlName="station"/>
+      </label>
+      
+       <label>
+        Traffic min <input type="number"  formControlName="trafficMin" /> 
+      </label>
+      <label>
+        Traffic max <input type="number"  formControlName="trafficMax" />
+      </label>
+      <label>
+        Ville <input type="text"  formControlName="ville" />
+      </label>
+      <input type="submit" class="button expanded" value="Search" [disabled]="disableButton(!rForm.valid)">
+    </div>
+  </div>
+</form>
+
+ <br/>
+ <br/>
+   
+
+<div class="searchbanqueaccount-container mat-elevation-z8">
+<mat-table #table [dataSource]="dataSource">
+
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+  <ng-container matColumnDef="id">
+      <mat-header-cell *matHeaderCellDef>ID </mat-header-cell>
+      <mat-cell *matCellDef="let element"><a (click)="clickSecuritiesConf(element.id)">{{element.id}}</a> </mat-cell>
+    </ng-container>
+  <ng-container matColumnDef="reseau">
+    <mat-header-cell *matHeaderCellDef> Reseau </mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.reseau}} </mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="station">
+    <mat-header-cell *matHeaderCellDef> Station </mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.station}} </mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="traffic">
+    <mat-header-cell *matHeaderCellDef> traffic</mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.traffic}} </mat-cell>
+  </ng-container>
+  <ng-container matColumnDef="corresp">
+      <mat-header-cell *matHeaderCellDef>  Correspond</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.correspond}} </mat-cell>
+    </ng-container>
+
+  <ng-container matColumnDef="ville">
+    <mat-header-cell *matHeaderCellDef>  Ville </mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.ville}} </mat-cell>
+  </ng-container>
+  <ng-container matColumnDef="arrond">
+    <mat-header-cell *matHeaderCellDef>  Arrond </mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.arrond}} </mat-cell>
+  </ng-container>
+ 
+  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+  <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+</mat-table>
+</div>
