KAR003 : Search traffic stations + still bug

--- a/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
@@ -1,4 +1,4 @@
-<form [formGroup] = "rForm" (ngSubmit)="searchSecuritiesConf(rForm.value)">
+<form [formGroup] = "rForm" (ngSubmit)="searchTrafficStations(rForm.value)">
   <div class="form-container">
     <div class="row columns">
       <h1>Search traffic stations</h1>
