KAR003 : Search traffic stations + still bug

--- a/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
@@ -34,18 +34,14 @@
   <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
 
-  <ng-container matColumnDef="id">
-      <mat-header-cell *matHeaderCellDef>ID </mat-header-cell>
-      <mat-cell *matCellDef="let element"><a (click)="clickSecuritiesConf(element.id)">{{element.id}}</a> </mat-cell>
-    </ng-container>
+  <ng-container matColumnDef="station">
+    <mat-header-cell *matHeaderCellDef> Station </mat-header-cell>
+    <mat-cell *matCellDef="let element"><a (click)="clickSecuritiesConf(element.id)"> {{element.station}} </a> </mat-cell>
+  </ng-container>
+
   <ng-container matColumnDef="reseau">
     <mat-header-cell *matHeaderCellDef> Reseau </mat-header-cell>
     <mat-cell *matCellDef="let element"> {{element.reseau}} </mat-cell>
-  </ng-container>
-
-  <ng-container matColumnDef="station">
-    <mat-header-cell *matHeaderCellDef> Station </mat-header-cell>
-    <mat-cell *matCellDef="let element"> {{element.station}} </mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="traffic">
