KAR005 : Add new component not finish create-station

--- a/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
@@ -68,3 +68,10 @@
   <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 </mat-table>
 </div>
+
+<br/>
+<br/>
+<button class="button" (click)="createStation($event)">Create station</button>
+
+<br/>
+<br/>
