--- a/StationDemoClient/station-angular4-poc/src/app/component/create-station/create-station.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/create-station/create-station.component.html
@@ -1,5 +1,5 @@
 <div>
-  <form [formGroup] = "rForm" (ngSubmit)="creditAccountController(rForm.value)">
+  <form [formGroup] = "rForm" (ngSubmit)="createStation(rForm.value)">
     <div class="form-container">
       <div class="row columns">
         <h1>Create station</h1>
@@ -27,7 +27,7 @@
         </label>
         <br/>   
         <label>Arrondissement
-          <input type="text"  formControlName="arrondissement"/>
+          <input type="number"  formControlName="arrondissement"/>
         </label>
 
         <input type="submit" class="button expanded" value="Create" [disabled]="disableButton(!rForm.valid)">
