KAR006 : Add select station

--- a/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
@@ -71,7 +71,13 @@
 
 <br/>
 <br/>
-<button class="button" (click)="createStation($event)">Create station</button>
+<table>
+  <tr>
+    <td item-width="350"></td>
+    <td item-width="150"><button class="button" (click)="createStation($event)">Create station</button></td>
+  </tr>
+
+
 
 <br/>
 <br/>
