KAR007 : Update working

--- a/StationDemoClient/station-angular4-poc/src/app/component/update-station/update-station.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/update-station/update-station.component.html
@@ -12,7 +12,7 @@
            <br/>
            <span class="pocbold">Station</span> :    {{trafficStationBeanUpdate.station}}
            <br/>
-           <span class="pocbold">Traffic</span> :    <input type="number"  formControlName="traffic" value="{{trafficStationBeanUpdate.traffic}}"/>
+           <span class="pocbold">Traffic</span> :    <input type="number"  formControlName="traffic" />
         
            <br/>
            <span class="pocbold">Correspondance</span> :   <input type="text"  formControlName="correspondance" value="{{trafficStationBeanUpdate.listCorrespondance}}"/>
