KAR009 : Migration to angular5

--- a/StationDemoClient/station-angular4-poc/src/app/component/update-station/update-station.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/update-station/update-station.component.html
@@ -20,7 +20,7 @@
            <span class="pocbold">Ville </span> :  {{trafficStationBeanUpdate.ville}}
        
            <br/>   
-           <span class="pocbold">Arrondissemen></span> :  {{trafficStationBeanUpdate.arrondissement}}
+           <span class="pocbold">Arrondissement</span> :  {{trafficStationBeanUpdate.arrondissement}}
 
            <br/>
            <br/>
