--- a/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
@@ -65,7 +65,7 @@
   </ng-container>
  
   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-  <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onStationClicked(row)"></mat-row>
 </mat-table>
 </div>
 
