--- a/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
@@ -1,7 +1,7 @@
 <form [formGroup] = "rForm" (ngSubmit)="searchTrafficStations(rForm.value)">
   <div class="form-container">
     <div class="row columns">
-      <h1>Search traffic stations ( {{numberElementsFound}} found)</h1>
+      <h1>Search traffic stations</h1>
       <label>Reseau
         <select formControlName="reseau" [(ngModel)]="reseauChoose">
           <option *ngFor="let reseauSelect of mapReseaux" [ngValue]="reseauSelect.key">{{reseauSelect.value}}</option>	  
@@ -31,6 +31,11 @@
    
 
 <div class="searchbanqueaccount-container mat-elevation-z8">
+
+  <div class="spinner-container" *ngIf="dataSource.loading$ | async">
+     <mat-spinner></mat-spinner>
+  </div>
+
 <mat-table #table [dataSource]="dataSource">
 
   <!--- Note that these columns can be defined in any order.
@@ -67,6 +72,10 @@
   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
   <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onStationClicked(row)"></mat-row>
 </mat-table>
+
+<mat-paginator [length]="200" [pageSize]="NUMBER_MAX_ELEMENTS_TAB" [pageSizeOptions]="[5, 10, 15]"></mat-paginator>
+
+
 </div>
 
 <br/>
