--- a/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
@@ -73,7 +73,7 @@
   <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onStationClicked(row)"></mat-row>
 </mat-table>
 
-<mat-paginator [length]="200" [pageSize]="NUMBER_MAX_ELEMENTS_TAB" [pageSizeOptions]="[5, 10, 15]"></mat-paginator>
+<mat-paginator [length]="numberElementsFound" [pageSize]="NUMBER_MAX_ELEMENTS_TAB" [pageSizeOptions]="[5, 10, 15]"></mat-paginator>
 
 
 </div>
