KAR014 : Ne marche pas

--- a/StationDemoClient/station-angular4-poc/src/app/component/station-auth/station-auth.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/station-auth/station-auth.component.html
@@ -1,40 +1,3 @@
-
-
-<div>
-  <form [formGroup] = "rForm" (ngSubmit)="authenticate(rForm.value)">
-    <div class="form-container">
-      <div class="row columns">
-        <h2>Hello to TrafficStationDemo</h2>
-
-        <br/>
-  
-        <div *ngIf="errors != null && errors.length != 0">
-          <TABLE BORDER="0">
-            <tr *ngFor="let error of errors">
-                  
-              <td class="tdmessagelogin"> 
-                  <span class="messageerreur"> {{error}} </span>  
-               
-             </td>
-            </tr>
-          </TABLE>
-          <br/>        
-        </div>        
-       
-        
-        <label>User
-          <input type="text" formControlName="login" />
-        </label>
-        <br/>
-
-        <label>Password
-          <input type="password" formControlName="password" />
-        </label>
-        
-        <br/>
-        <br/>      
-        <input type="submit" class="button expanded" value="Connect" [disabled]="disableButton(!rForm.valid)">
-      </div>
-    </div>
-  </form>
-</div>
+<div *ngIf="!givenName">
+  <button class="button" (click)="login()">Login</button>
+</div>`
