--- a/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
@@ -9,6 +9,8 @@
     <div class="row columns">
       <h1>Search traffic stations (User : {{givenName}}) - <a (click)="logout()">Logout</a></h1>
       <br/>
+      Role : {{roleStore}}
+      <br/>
       <label>Reseau
         <select formControlName="reseau" [(ngModel)]="reseauChoose">
           <option *ngFor="let reseauSelect of mapReseaux" [ngValue]="reseauSelect.key">{{reseauSelect.value}}</option>	  
