--- a/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
@@ -1,88 +1,88 @@
 <div *ngIf="!givenName">
-  <button class="button" (click)="login()">Login</button>
+<button class="button" (click)="login()">Login</button>
 </div>`
 
 <div *ngIf="givenName">
-  
- <form [formGroup] = "rForm" (ngSubmit)="searchTrafficStations(rForm.value)">
-  <div class="form-container">
-    <div class="row columns">
-      <h1>Search traffic stations (User : {{givenName}}) - <a (click)="logout()">Logout</a></h1>
-      <br/>
-      Role  : {{roleStore}}
-      <br/>
-      <br/>
-      <label>Reseau
-        <select formControlName="reseau" [(ngModel)]="reseauChoose">
-          <option *ngFor="let reseauSelect of mapReseaux" [ngValue]="reseauSelect.key">{{reseauSelect.value}}</option>	  
-       </select>
-      </label>
-  
-      <label>Station
-        <input type="text" formControlName="station"/>
-      </label>
-      
-       <label>
-        Traffic min <input type="number"  formControlName="trafficMin" /> 
-      </label>
-      <label>
-        Traffic max <input type="number"  formControlName="trafficMax" />
-      </label>
-      <label>
-        Ville <input type="text"  formControlName="ville" />
-      </label>
-      <input type="submit" class="button expanded" value="Search" [disabled]="disableButton(!rForm.valid)">
-    </div>
+
+<form [formGroup] = "rForm" (ngSubmit)="searchTrafficStations(rForm.value)">
+<div class="form-container">
+  <div class="row columns">
+    <h2 translate="HELLO_MESSAGE" [translateParams]="paramsHelloMessage"> </h2> --   <a (click)="logout()" translate="LOGOUT"></a>
+    <br/>
+    Role  : {{roleStore}} - <button (click)="switchLanguage('en')">en</button><button (click)="switchLanguage('fr')">fr</button>
+    <br/>
+    <br/>
+    <label><span translate="NETWORK_LABEL"></span>
+      <select formControlName="reseau" [(ngModel)]="reseauChoose">
+        <option *ngFor="let reseauSelect of mapReseaux" [ngValue]="reseauSelect.key">{{reseauSelect.value}}</option>	  
+     </select>
+    </label>
+
+    <label><span translate="STATION_LABEL"></span>
+      <input type="text" formControlName="station"/>
+    </label>
+    
+     <label>
+      <span translate="TRAFFIC_MIN_LABEL"></span><input type="number"  formControlName="trafficMin" /> 
+    </label>
+    <label>
+      <span translate="TRAFFIC_MAX_LABEL"></span> <input type="number"  formControlName="trafficMax" />
+    </label>
+    <label>
+      <span translate="CITY_LABEL"></span> <input type="text"  formControlName="ville" />
+    </label>
+    <input type="submit" value="Search" class="button expanded" [disabled]="disableButton(!rForm.valid)">
   </div>
+</div>
 </form>
 
- <br/>
- <br/>
-   
+<br/>
+<br/>
+ 
 
 <div class="searchbanqueaccount-container mat-elevation-z8">
 
-  <div class="spinner-container" *ngIf="dataSource.loading$ | async">
-     <mat-spinner></mat-spinner>
-  </div>
+<div class="spinner-container" *ngIf="dataSource.loading$ | async">
+   <mat-spinner></mat-spinner>
+</div>
 
 <mat-table #table [dataSource]="dataSource"  matSort matSortActive="traffic" matSortDirection="desc" matSortDisableClear>
 
-  <!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
+<!--- Note that these columns can be defined in any order.
+      The actual rendered columns are set as a property on the row definition" -->
 
-  <ng-container matColumnDef="station">
-    <mat-header-cell *matHeaderCellDef mat-sort-header> Station </mat-header-cell>
-    <mat-cell *matCellDef="let element"> <div *ngIf="roleStore != null && roleStore == 'manager'"><a (click)="selectStation(element.id)"> {{element.station}} </a></div>
-       <div *ngIf="roleStore == null || roleStore != 'manager'">{{element.station}} </div>
-    </mat-cell>
+<ng-container matColumnDef="station">
+  <mat-header-cell *matHeaderCellDef mat-sort-header> <span translate="STATION_LABEL"></span> </mat-header-cell>
+  <mat-cell *matCellDef="let element"> <div *ngIf="roleStore != null && roleStore == 'manager'"><a (click)="selectStation(element.id)"> {{element.station}} </a></div>
+     <div *ngIf="roleStore == null || roleStore != 'manager'">{{element.station}} </div>
+  </mat-cell>
+</ng-container>
+
+<ng-container matColumnDef="reseau">
+  <mat-header-cell *matHeaderCellDef mat-sort-header> <span translate="NETWORK_LABEL"></span> </mat-header-cell>
+  <mat-cell *matCellDef="let element"> {{element.reseau}} </mat-cell>
+</ng-container>
+
+<ng-container matColumnDef="traffic">
+  <mat-header-cell *matHeaderCellDef mat-sort-header> <span translate="TRAFFIC_LABEL"></span> </mat-header-cell>
+  <mat-cell *matCellDef="let element"> {{element.traffic}} </mat-cell>
+</ng-container>
+<ng-container matColumnDef="listCorrespondance">
+    <mat-header-cell *matHeaderCellDef>  <span translate="CORRESPOND_LABEL"></span></mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.listCorrespondance}} </mat-cell>
   </ng-container>
 
-  <ng-container matColumnDef="reseau">
-    <mat-header-cell *matHeaderCellDef mat-sort-header> Reseau </mat-header-cell>
-    <mat-cell *matCellDef="let element"> {{element.reseau}} </mat-cell>
-  </ng-container>
+<ng-container matColumnDef="ville">
+  <mat-header-cell *matHeaderCellDef mat-sort-header>  <span translate="CITY_LABEL"></span> </mat-header-cell>
+  <mat-cell *matCellDef="let element"> {{element.ville}} </mat-cell>
+</ng-container>
+<ng-container matColumnDef="arrond">
+  <mat-header-cell *matHeaderCellDef>  <span translate="ARRONDISS_LABEL"></span> </mat-header-cell>
+  <mat-cell *matCellDef="let element"> {{element.arrondissement}} </mat-cell>
+</ng-container>
 
-  <ng-container matColumnDef="traffic">
-    <mat-header-cell *matHeaderCellDef mat-sort-header> traffic</mat-header-cell>
-    <mat-cell *matCellDef="let element"> {{element.traffic}} </mat-cell>
-  </ng-container>
-  <ng-container matColumnDef="listCorrespondance">
-      <mat-header-cell *matHeaderCellDef>  Correspond</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.listCorrespondance}} </mat-cell>
-    </ng-container>
-
-  <ng-container matColumnDef="ville">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>  Ville </mat-header-cell>
-    <mat-cell *matCellDef="let element"> {{element.ville}} </mat-cell>
-  </ng-container>
-  <ng-container matColumnDef="arrond">
-    <mat-header-cell *matHeaderCellDef>  Arrond </mat-header-cell>
-    <mat-cell *matCellDef="let element"> {{element.arrondissement}} </mat-cell>
-  </ng-container>
- 
-  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-  <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onStationClicked(row)"></mat-row>
+<mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+<mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onStationClicked(row)"></mat-row>
 </mat-table>
 
 <mat-paginator [length]="numberElementsFound" [pageSize]="NUMBER_MAX_ELEMENTS_TAB" [pageSizeOptions]="[5, 10, 15,50]"></mat-paginator>
@@ -90,19 +90,18 @@
 
 </div>
 
- <br/>
- <br/>
- <div *ngIf="roleStore != null && roleStore == 'manager'">
-  <table>
-    <tr>
-      <td item-width="350"></td>
-      <td item-width="150"><button class="button" (click)="createStation($event)">Create station</button></td>
-    </tr>
-  </table>
+<br/>
+<br/>
+<div *ngIf="roleStore != null && roleStore == 'manager'">
+<table>
+  <tr>
+    <td item-width="350"></td>
+    <td item-width="150"><button class="button" (click)="createStation($event)">Create station</button></td>
+  </tr>
+</table>
 </div>
 
 
- <br/>
- <br/>
- </div>
-
+<br/>
+<br/>
+</div>
